[project]
name = "sphinx-exec-directive"
description = "Run Python code blocks and display the output directly within Sphinx documentation"
version = "0.8.0"
authors = [
    { name = "Jonathan Yong", email = "yongrenjie@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sphinx",
    "docutils",
]

[project.optional-dependencies]
dev = [
    "tox",
    "sphinx-autobuild",
    "numpydoc"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
